<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budgets and Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_label_ID">Unique ID</string>
    <string name="text_hint_ID">*</string>
    <string name="text_label_account_name">Name</string>
    <string name="text_hint_account_name">Enter the account nickname</string>
    <string name="text_label_account_description">Description</string>
    <string name="text_hint_account_description">Enter a short description of the account</string>
    <string name="text_label_account_type">Type</string>
    <string name="text_label_account_balance">Balance</string>
    <string name="text_hint_account_balance">Current Account Balance</string>
    <string name="text_label_account_interest_rate">Interest Rate</string>
    <string name="text_hint_account_interest_rate">Account Interest Rate</string>
    <string name="text_label_account_providor">Providor</string>
    <string name="text_hint_account_providor">Company that holds account</string>
    <string name="text_button_create">Create</string>
    <string name="text_button_update">Update</string>
    <string name="string_accounts">Accounts</string>
    <string name="string_budgets">Budgets</string>

    <string-array name="items_account_type">
        <item>All Accounts</item>
        <item>Credit Card</item>
        <item>Loan</item>
        <item>Checking</item>
        <item>Saving</item>
    </string-array>
    
    <string-array name="budget_filter_periods">
        <item>Month</item>
        <item>Year</item>
        <item>Week</item>
    </string-array>

    <string name="text_label_account">Account</string>
    <string name="label_transaction_checkbox">Is debit?</string>
    <string name="text_label_transaction_amount">Amount</string>
    <string name="text_label_transaction_budget">Associated Budget</string>

    <color name="red">#FF0000</color>
    <color name="black">#000000</color>

    <string name="text_add">Add</string>
    <string name="text_label_transaction_date">Date</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_budget_transaction_list">BudgetTransactionList</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_edit_budget">EditBudgetActivity</string>
    <string name="title_activity_budget_list">BudgetListActivity</string>

</resources>